fix repo-docs title wrap

--- a/app/javascript/styles/component/list.scss
+++ b/app/javascript/styles/component/list.scss
@@ -41,13 +41,10 @@
   }
   .title {
     display: block;
-    a {
-      color: #000;
-    }
+    color: #000;
     font-size: 15px;
     padding-right: 20px;
     margin-bottom: 4px;
-    flex: auto;
   }
   .info {
     margin-top: 17px;
